added virtual ts and cs

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -1,54 +1,31 @@
 ---
 layout: pageLayout
 ---
-<!-- <section class="hero-wrap hero-wrap-2 js-fullheight" data-stellar-background-ratio="0.5"
-         style="background-image: url('../images/bg_2.jpg');">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
-            <div class="col-xl-10 mt-5 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"> Regional
-                    <br><span>Scrum Gathering®</span></h1>
-                <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">February 25 - 26, 2021.
-                    Cape Town, South Africa</p>
-                <div class="d-flex mb-3" id="timer">
-                    <div class="time" id="days"></div>
-                    <div class="time pl-4" id="hours"></div>
-                    <div class="time pl-4" id="minutes"></div>
-                    <div class="time pl-4" id="seconds"></div>
-                </div>
-            </div>
-            <div class="col-md-9 ftco-animate pb-5">
-                <h1 class="mb-3 bread">Call for Papers Information</h1>
-                <p class="breadcrumbs"><span class="mr-2"><a href="../index.html">Home <i
-                        class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="../speakers.html">Speakers <i
-                        class="ion-ios-arrow-forward"></i></a></span> <span>Call for Papers Information <i
-                        class="ion-ios-arrow-forward"></i></span></p>
-            </div>
-        </div>
-    </div>
-</section> -->
 
 <!-- BEGINNING Content section -->
 <!-- BEGINNING Intro Section -->
 <section class="ftco-section">
     <div class="container">
+        <br />
         <br/>
         <div class="row justify-content-center pb-3">
-            <h2 class="mb-1">Regional Scrum Gathering® South Africa 2022</h2>
+            <h2 class="mb-1">Regional Scrum Gathering® South Africa</h2>
         </div>
         <div class="row justify-content-center pb-3">
-            <h4 class="mb-1">Live, online  3 – 4 March 2022</h4>
+            <h4 class="mb-1">Live, online 3 – 4 March 2022</h4>
         </div>
-        
+
         <div class="row">
             <p>Numerous instances of the Regional Scrum Gathering®, supported by Scrum Alliance, take place around the
                 Globe every year. South Africa’s event has been running for over ten years. It enjoys a reputation for
                 being an excellent opportunity to learn and to connect with the local Agile and Scrum community; making
                 it a popular, highly anticipated event in the calendar. </p>
 
-            <p>We are currently looking for speakers to present talks and workshops that embrace simplicity in our
+            <p>We are currently looking for speakers to present talks and workshops that welcome change in our
                 community of Agilists.</p>
+
+            <p>If you are interested in being a speaker, please check out our Call for Papers
+                information page to submit your inspirational talks aligned to our theme of <strong>Welcoming Change</strong>.</p>
 
             <p>All accepted speakers and co-speakers will be eligible for a ticket to attend the full conference. We
                 have a generous travel and accommodation policy, detailed in our Speaker Terms and Conditions below.</p>
@@ -58,7 +35,7 @@ layout: pageLayout
             <ul>
                 <!-- <li><a href="#cfp-theme">Conference Theme</a></li>
                 <li><a href="#cfp-tracks">Conference Tracks</a></li> -->
-                <li><a href="terms-and-conditions-speakers.html">Speaker Terms & Conditions</a></li>
+                <li><a href="terms-and-conditions-virtual.html">Speaker Terms & Conditions</a></li>
                 <li><a href="https://sugsa.org.za/about-us/code-of-conduct/" target="_blank">SUGSA Code of Conduct</a>
                     (opens in new window)
                 </li>
@@ -66,6 +43,8 @@ layout: pageLayout
         </div>
         <div class="row justify-content-center pb-3">
             <h4>Ready to submit? Propose your session in our Call for Paper tool below!</h4>
+            <br/>
+            <br/>
             <div class="col-md-4 heading-section ftco-animate text-center justify-content-center">
                 <a class="btn btn-primary d-block px-2 py-3" href="https://sessionize.com/SGZA2021/"
                     target="_blank">Submit
@@ -78,7 +57,7 @@ layout: pageLayout
 <!-- END Intro Section-->
 
 <!-- BEGINNING Theme Section -->
-<section class="ftco-section" id="cfp-theme">
+<section class="ftco-section" id="theme">
     <div class="container">
         <h3>Call for Papers - Welcome Change</h3>
         <p>As Heraclitus, the famous Greek philosopher said, “The only thing constant in life is change.” This is
@@ -166,8 +145,9 @@ layout: pageLayout
     <div class="container">
         <h3>Timeline (Central Africa Time UTC+2) </h3>
         <p><strong>1 November 2021:</strong> Call for Paper opens!</p>
-        <p><strong>15 December 2021 midnight :</strong> Closed for submissions - submissions cannot be edited thereafter</p>
-        <p><strong>15 January 2022:</strong> Inform successful speakers.</p>
+        <p><strong>15 December 2021 midnight :</strong> Closed for submissions - submissions cannot be edited thereafter
+        </p>
+        <p><strong>21 January 2022:</strong> Inform successful speakers.</p>
         <p><strong>31 January 2022:</strong> Finalise confirmed speaker list.</p>
         <p><strong>7 February 2022:</strong> Programme announced!</p>
     </div>
@@ -175,7 +155,7 @@ layout: pageLayout
 <!-- END Timeline Section-->
 
 <!-- BEGINNING Tracks Section -->
-<section class="ftco-section" id="cfp-tracks">
+<section class="ftco-section" id="tracks">
     <div class="container">
         <h3>Our Topic Tracks</h3>
         <p>This year we have decided to not provide tracks, in order to be less restrictive. For every Gathering, we
@@ -187,7 +167,7 @@ layout: pageLayout
 <!-- END Tracks Section -->
 
 <!-- BEGINNING Additional Information Section -->
-<section class="ftco-section" id="cfp-additional-information">
+<section class="ftco-section" id="additional-information">
     <div class="container">
         <h3>Additional Information</h3>
         <h6><i>(guidance for submitting a session)</i></h6>
@@ -217,7 +197,7 @@ layout: pageLayout
 <!-- END Additional Information Section-->
 
 <!-- BEGINNING FAQ Section -->
-<section class="ftco-section bg-light" id="cfp-faq">
+<section class="ftco-section bg-light" id="faq">
     <div class="container">
         <h3>Frequently Asked Questions</h3>
         <p>We will update this section as more frequently asked questions arise.</p>
