changes before launching call for papers

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -25,7 +25,7 @@ layout: pageLayout
                 community of Agilists.</p>
 
             <p>If you are interested in being a speaker, please check out our Call for Papers
-                information page to submit your inspirational talks aligned to our theme of <strong>Welcoming Change</strong>.</p>
+                information page to submit your inspirational talks aligned to our theme of <strong>Welcome Change</strong>.</p>
 
             <p>All accepted speakers and co-speakers will be eligible for a ticket to attend the full conference. We
                 have a generous travel and accommodation policy, detailed in our Speaker Terms and Conditions below.</p>
@@ -45,8 +45,10 @@ layout: pageLayout
             <h4>Ready to submit? Propose your session in our Call for Paper tool below!</h4>
             <br/>
             <br/>
+            <br/>
+            <br/>
             <div class="col-md-4 heading-section ftco-animate text-center justify-content-center">
-                <a class="btn btn-primary d-block px-2 py-3" href="https://sessionize.com/SGZA2021/"
+                <a class="btn btn-primary d-block px-2 py-3" href="https://sessionize.com/SGZA2022"
                     target="_blank">Submit
                     a Session
                     <span class="icon-arrow-right"></span></a>
