--- a/terms-and-conditions-virtual.html
+++ b/terms-and-conditions-virtual.html
@@ -12,7 +12,7 @@ layout: pageLayout
             <!--            <div class="col-md-10 heading-section ftco-animate text-center">-->
         </div>
         <div class="row mb-5 pb-3">
-            <p>SUGSA’s mission is to embrace simplicity within the Agile space. We aim to create opportunities for
+            <p>SUGSA’s mission is to welcome change within the Agile space. We aim to create opportunities for
                 learning, sharing, and connecting, in support of a healthy, vibrant community of users of Agile and
                 lightweight software development methods and processes. SUGSA is a non-profit group, run by a committee
                 of volunteers.</p>
